test/error/type_mismatch.ss
var x = 3;
x = "hello";
# -> type error
